fix copy and pasting on mobile, add toast

--- a/ui/src/components/passwords/CopyableField.scss
+++ b/ui/src/components/passwords/CopyableField.scss
@@ -1,8 +1,15 @@
 .cp-copyable-field {
   display: flex;
-  // justify-content: space-between;
 
   .copy-link {
     margin-left: 1em;
+  }
+}
+
+.toast.copy-success {
+  background-color: black;
+
+  i {
+    margin-right: .5rem;
   }
 }
